# DIY-GNSS-v2

./: CMakeLists.txt  Kconfig  adafruit_itsybitsy_nrf52840.overlay  prj.ZDebug.conf  prj.ZRelease.conf  prj.conf  west.yml
configuration/adafruit_itsybitsy_nrf52840/: buttons_def.h  settings_loader_def.h
drivers/: CMakeLists.txt  Kconfig
drivers/max17048/: CMakeLists.txt  Kconfig
drivers/max17048/dts/bindings/: maxim,max17048.yaml
drivers/max17048/include/: max17048.h
drivers/max17048/src/: max17048.c
drivers/px1122r/: CMakeLists.txt  Kconfig
drivers/px1122r/dts/bindings/: skytraq,px1122r.yaml
drivers/px1122r/include/: px1122r.h
drivers/px1122r/src/: px1122r.c
drivers/px1122r/zephyr/: CMakeLists.txt  Kconfig  px1122r.c  px1122r.h
drivers/rfm9x/: CMakeLists.txt  Kconfig
drivers/rfm9x/dts/bindings/: hoperf,rfm9x.yaml
drivers/rfm9x/include/: rfm9x.h
drivers/rfm9x/src/: rfm9x.c  rfm9x.h
include/: ble_gnss.h  config.h
include/events/: base_event.h  data_event.h  gnss_event.h  rover_event.h
src/: main.c
src/events/: base_event.c  data_event.c  gnss_event.c  rover_event.c
src/modules/: base_module.c  battery_module.c  ble_module.c  data_module.c  gnss_module.c  io_module.c  lora_module.c  rover_module.c
